--- a/body/3Symbols.tex
+++ b/body/3Symbols.tex
@@ -1,2 +1,32 @@
 \section{Symbols}
 
+\begin{table}[h]
+\centering
+\caption{Notation and Symbol Definitions}
+\label{tab:symbols}
+\begin{tabular}{cl}
+\toprule
+\textbf{Symbol} & \textbf{Description} \\
+\midrule
+$n$ & Number of countries (samples) \\
+$p$ & Number of indicators \\
+$x_{ij}$ & Raw value of indicator $j$ for country $i$ \\
+$x'_{ij}$ & Standardized value of indicator $j$ for country $i$ \\
+$r_{jk}$ & Pearson correlation coefficient between indicators $j$ and $k$ \\
+$I_j$ & Comprehensive importance score of indicator $j$ \\
+$w_j$ & Entropy weight of indicator $j$ \\
+$C_i$ & TOPSIS closeness score for country $i$ \\
+$\gamma_i$ & Grey relational degree of country $i$ \\
+$S_i$ & Integrated evaluation score for country $i$ \\
+$\hat{x}_{i,j,t}$ & Predicted value of indicator $j$ for country $i$ in year $t$ \\
+$C_{i,t}$ & AI competitiveness score of country $i$ in year $t$ \\
+$a, b$ & Development coefficient and grey action quantity in GM(1,1) \\
+$I_j$ & Investment allocation for indicator $j$ \\
+$\Delta x_j(\mathbf{I})$ & Growth increment of indicator $j$ under investment $\mathbf{I}$ \\
+$L_j$ & Theoretical upper bound of indicator $j$ \\
+$\gamma_j$ & Time discount factor for indicator $j$ \\
+$C_j$ & Unit cost for improving indicator $j$ \\
+\bottomrule
+\end{tabular}
+\end{table}
+
